--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">NavigasiKu</string>
-    <string name="submit">Submit</string>
+    <string name="masuk">Masuk</string>
     <string name="back">Back</string>
     <string name="nama_lengkap">NAMA_LENGKAP</string>
     <string name="jenis_kelamin">JENIS_KELAMIN</string>
